assets/components/src/action-card/style.scss
/**
 * Action Card
 */

@import '~@wordpress/base-styles/colors';
@import '../../../shared/scss/colors';

.newspack-card.newspack-action-card {
	box-shadow: 0 4px 8px rgba( black, 0.08 );
	padding: 24px;

	// Clickable

	&.newspack-card__is-clickable {
		transition: box-shadow 125ms ease-in-out;

		&:hover {
			box-shadow: 0 4px 8px rgba( black, 0.24 );
		}
	}

	// Unsupported

	&.newspack-card__is-unsupported {
		border-left: 4px solid $alert-red;
	}

	// Supported

	&.newspack-card__is-supported {
		border-left: 4px solid $alert-green;
	}

	// Primary

	&.newspack-card__is-primary {
		border-left: 4px solid $primary-500;
	}

	// Disabled

	&.newspack-card__is-disabled {
		border-left: 4px solid $light-gray-700;
	}

	// Typography

	h2,
	p {
		margin: 0;
		max-width: 100%;
		width: 100%;
	}

	h2 {
		align-items: center;
		display: flex;
		flex-wrap: wrap;
		margin-right: -8px;

		.newspack-action-card__title {
			margin-right: 8px;
		}
	}

	// Regions

	.newspack-action-card__region {
		align-items: center;
		display: flex;
		justify-content: space-between;
		margin: 0;
	}

	.newspack-action-card__region-top {
		display: block;

		@media screen and ( min-width: 744px ) {
			display: flex;
		}
	}

	.newspack-action-card__region-left {
		margin-bottom: 24px;

		@media screen and ( min-width: 744px ) {
			margin-bottom: 0;
			margin-right: 24px;
		}
	}

	.newspack-action-card__region-center {
		align-items: flex-start;
		flex: 1 1 auto;
		flex-wrap: wrap;
	}

	.newspack-action-card__region-right {
		align-items: flex-start;
		flex-direction: column;
		margin-top: 24px;

		@media screen and ( min-width: 744px ) {
			align-items: flex-end;
			flex-direction: column;
			margin-left: 24px;
			margin-top: 0;
		}
	}

	// Waiting

	.newspack-action-card__container {
		display: flex;
	}

	// Notifications

	.newspack-action-card__notification {
		.newspack-notice {
			margin: 24px 0 0;
		}
	}

	// Image

	.newspack-action-card__image {
		background-position: center;
		background-repeat: no-repeat;
		background-size: cover;
		border-radius: 50%;
		height: 48px;
		width: 48px;
	}

	// Icon

	.newspack_plugin-installer__icon {
		margin: 0;
	}

	// Toggle Control

	.components-toggle-control {
		margin-bottom: 24px;

		@media screen and ( min-width: 744px ) {
			margin-bottom: 0;
			margin-right: 24px;
		}

		.components-base-control__field {
			margin-bottom: 0;
		}

		.components-form-toggle {
			display: flex;
			margin: 0;
		}
	}

	// Buttons

	.newspack-button {
		&.newspack-action-card__secondary_button {
			&.is-link {
				color: $alert-red;

				&:active,
				&:focus,
				&:hover {
					color: darken( $alert-red, 20% );
				}
			}
		}
	}

	// Badge

	.newspack-action-card__badge {
		border: 1px solid $light-gray-500;
		border-radius: 12px;
		display: block;
		flex: 0 0 auto;
		font-size: 12px;
		font-weight: bold;
		line-height: 16px;
		margin: 3px 8px 3px 0;
		padding: 0 8px;
		text-transform: uppercase;
	}

	// Description Card

	&.newspack-description-card {
		font-style: italic;
	}

	// Form Token Field

	.newspack-form-token-field {
		margin: 16px 0 0;
	}

	// Multiple Cards

	& + & {
		margin-top: -16px;
	}
}

.newspack-card:not(.newspack-card__no-background) {
	.newspack-card.newspack-action-card {
		border: 1px solid $light-gray-200;
		box-shadow: none;

		// Unsupported

		&.newspack-card__is-unsupported {
			border-left: 4px solid $alert-red;
		}

		// Supported

		&.newspack-card__is-supported {
			border-left: 4px solid $alert-green;
		}

		// Primary

		&.newspack-card__is-primary {
			border-left: 4px solid $primary-500;
		}

		// Disabled

		&.newspack-card__is-disabled {
			border-left: 4px solid $light-gray-700;
		}
	}
}

